@@ -13,7 +13,8 @@ module Updater
 {
   component Sender
   {
-     port UpdaterConnector::DDS_Update test_topic_update;
+    port UpdaterConnector::DDS_Update test_topic_update;
+    provides CCM_DDS::ConnectorStatusListener connector_status;
   };
 };
 
